--- a/src/components/Page.scss
+++ b/src/components/Page.scss
@@ -1,6 +1,12 @@
 .page {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  opacity: 0;
+}
+
+.page.active {
+  opacity: 100;
+  animation-delay: 0.9s;
+}
