--- a/src/Shared.scss
+++ b/src/Shared.scss
@@ -3,3 +3,9 @@ $moonstone: #01a7c2;
 $seasalt: #f7f9f9;
 $pennRed: #a11414;
 $kellyGreen: #5fad41;
+
+.animationContainer {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+}
